[gd_scene load_steps=5 format=3 uid="uid://dvhx81m387kwr"]

[ext_resource type="Script" path="res://Components/enemy/enemy_wizard.gd" id="1_l1obw"]
[ext_resource type="Texture2D" uid="uid://dspmr7cy8l2ko" path="res://Assets/tilemap/tiny-dungeon.png" id="1_wo7le"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v3u40"]
size = Vector2(16, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_mch3e"]
radius = 53.0377

[node name="Enemy_Wizard" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_l1obw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_wo7le")
region_enabled = true
region_rect = Rect2(51, 153, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_v3u40")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_mch3e")
debug_color = Color(0.799714, 0.397972, 0.375184, 0.42)

[node name="AttackCooldown" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
